[gd_scene load_steps=8 format=3 uid="uid://c0lxvmfs81ob4"]

[ext_resource type="Texture2D" uid="uid://cigsdewro07vk" path="res://icon.svg" id="1_0f0t3"]
[ext_resource type="Theme" uid="uid://df2r57b2stnof" path="res://themes/ui.tres" id="1_wdf5y"]
[ext_resource type="Script" uid="uid://beb8jjjtg5iqw" path="res://objects/ui/choice_panel/choice_panel_choice.gd" id="2_vhl1g"]
[ext_resource type="Texture2D" uid="uid://bflf4t076bi84" path="res://sprites/ui/spinwheel/spinwheel_back.png" id="4_vhl1g"]
[ext_resource type="Texture2D" uid="uid://bw1bh7nrw8mfl" path="res://sprites/ui/spinwheel/spinwheel_white_circle.png" id="5_x37fy"]
[ext_resource type="Texture2D" uid="uid://4wwixrigdus3" path="res://sprites/ui/spinwheel/spinwheel_cursor.png" id="6_awe3n"]
[ext_resource type="Texture2D" uid="uid://d2pjho51i0wsg" path="res://sprites/ui/spinwheel/spinwheel_nail.png" id="6_xgcri"]

[node name="ChoicePanelChoice" type="PanelContainer"]
custom_minimum_size = Vector2(400, 540)
offset_right = 400.0
offset_bottom = 482.0
theme = ExtResource("1_wdf5y")
theme_type_variation = &"LightPanel"
script = ExtResource("2_vhl1g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="IconContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SureOption" type="Control" parent="VBoxContainer/IconContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="SureIcon" type="TextureRect" parent="VBoxContainer/IconContainer/SureOption"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("1_0f0t3")
expand_mode = 1
stretch_mode = 4

[node name="Lottery" type="Control" parent="VBoxContainer/IconContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/IconContainer/Lottery"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("4_vhl1g")
expand_mode = 1
stretch_mode = 4

[node name="LotteryProgress" type="TextureProgressBar" parent="VBoxContainer/IconContainer/Lottery"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 200)
max_value = 1.0
step = 0.01
value = 0.4
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("5_x37fy")
texture_progress = ExtResource("5_x37fy")
tint_under = Color(1, 1, 0.3764706, 1)
tint_progress = Color(0.15294118, 0.29803923, 1, 1)

[node name="Icon3" type="TextureRect" parent="VBoxContainer/IconContainer/Lottery"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("6_xgcri")
expand_mode = 1
stretch_mode = 4

[node name="LotteryCursor" type="TextureRect" parent="VBoxContainer/IconContainer/Lottery"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(195, 80)
size_flags_horizontal = 4
texture = ExtResource("6_awe3n")
expand_mode = 1
stretch_mode = 4

[node name="LotteryIcon" type="TextureRect" parent="VBoxContainer/IconContainer/Lottery"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("1_0f0t3")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "LABEL
LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "CHOICE_PANEL_SAFE"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
